alignment fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -343,8 +343,11 @@ footer .footer-button{
     /* About Section */
     .container-about {
         background-image: none;
-        padding-top: 2rem;
-        height: auto;
+        width: 100%;
+        height: 100vh;
+        padding-top: 0;
+        display: flex;
+        align-items: center;
     }
 
     .card-item-grid {}
@@ -367,6 +370,26 @@ footer .footer-button{
     
     }
 
+}
+
+/* Responsive Medium Device */
+@media screen and (min-width: 577px) and (max-width: 1200px) {
+    .skills {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);    
+    }
+
+    footer{
+        padding-top: 20rem;
+    }
+    
+}
+
+@media screen and (max-width: 2000px) {
+    hr{
+        display: none;
+    }
+    
 }
 
 .hide {
